
2006-12-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Add page tree update to publish button of module Web>Versioning

2006-12-07  Franz Holzinger  <kontakt@fholzinger.com>

	* Fix bug #4555: double posts in tt_board did not get detected because of unintended conversion into a negative integer

2006-12-07  Ingmar Schlecht  <ingmar@typo3.org>

	* Disabled typo3/alt_main_new.php as it's not fully working yet. Will be ready for TYPO3 4.2 probably, but not for 4.1.
	* Disabled wordIndexing() function of t3lib_refindex

2006-12-05  Michael Stucki  <michael@typo3.org>

	* Updated font-copyright information in t3lib/fonts/readme.txt - many thanks to Christian Welzel for taking care of this!
	* Security enhancement: Prevent image access through thumbs.php. For details, see http://typo3.org/teams/security/security-bulletins/typo3-20061205-1/ - thanks to Marc Bastian Heinrichs for discovering and reporting this issue.
	* Security enhancement: Refuse BE logins of usernames starting with "_CLI_" (they are only used by real CLI scripts)

2006-11-21  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Allow strftime-syntax for config.stat_apache_logfile (Thanks to Francois Suter and Michael Stucki).
	* Enhanced message for recordset warning (see change at 2006-12-02) and removed serializing of objects in the backtrace (devlog).

2006-12-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Use <label> tags in tceforms where appropriate to enhance usability (Thanks to Ingo Renner for writing the patch!)
	* Increase length for titles of be_users, be_groups, and fe_groups (Thanks to Ingo Renner for writing the patch!)

2006-12-02  Dmitry Dulepov  <dmitry@typo3.org>

	* t3lib_db: added calls to t3lib_div::sysLog() and t3lib_div::devLog() if recordset is not valid

2006-12-01  Kasper Skaarhoj  <kasper2006@typo3.com>

	* Additionsl to FlexFormTools
	* Improved localization in tcemain
	* Changed pages_languages_overlay to NOT be hidden by default