@@ -2,6 +2,7 @@
 2006-12-11  Martin Kutschker  <martin.t.kutschker@blackbox.net>
 
 	* Add page tree update to publish button of module Web>Versioning
+	* Added "new record" icon to table listing in module Web>Page
 
 2006-12-07  Franz Holzinger  <kontakt@fholzinger.com>
 
